Fix the bug that typing in a sticky box scrolls the page unexpectedly.

Previously computing the rect to scroll when revealing the selected
sticky box didn't handle the sticky offset correctly due to incorrect
document lifecycle which caused unexpected page scroll.

Bug: 740417
Change-Id: I87ed4da4ca10fa7be78620ac8a8240084d50b6c5
Reviewed-on: https://chromium-review.googlesource.com/576215
Commit-Queue: Yi Gu <yigu@chromium.org>
Reviewed-by: Robert Flack <flackr@chromium.org>
Reviewed-by: Steve Kobes <skobes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489006}
Former-commit-id: 3bc01c107eed20298c1379996b6e1596189eab66